# mentorslab

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: django.yml
api/: serializers.py  tests.py  urls.py  views.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_comment_blogcomment.py
client/: package.json
client/src/: App.test.tsx  App.tsx  config.ts  index.tsx
client/src/constants/: routes.ts  storage.ts
client/src/core-ui/MentorshipRequestCard/: index.tsx
client/src/data/: tags.ts
client/src/enums/: role.enum.ts  status.enum.ts
client/src/hooks/: reduxHooks.ts
client/src/router/: AuthRoute.tsx  NonAuthRoute.tsx  Router.tsx
client/src/services/: auth-header.ts
client/src/store/: rootReducer.ts
client/src/styles/: index.css
client/src/types/: index.ts
client/src/utils/: http.ts
client/src/views/: index.ts
forum/: admin.py  models.py  serializers.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_alter_commentvote_voter.py  0003_alter_vote_voter.py  0004_auto_20211102_1542.py
mentorship/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
mentorship/migrations/: 0001_initial.py
mentorslab/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  urls.py
users/api/: serializers.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_profile_uuid.py  0004_auto_20211111_1744.py  0005_auto_20211113_1433.py
users/tests/: test_api.py  test_auth.py  test_models.py
users/views/: me.py  users.py
(+32 files in other folders)
