[tool.poetry]
name = "mentosLab"
version = "0.1.0"
description = ""
authors = ["mukezhz <mukezhz@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
